@@ -1,3 +1,11 @@
+2007-01-06  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* ParseXSDoc.pm:
+	* GenPod.pm: Add a "deprecated_for" key to the apidoc parser;
+	you should use this to mark an object deprecated in favour of
+	another.  Also add a __deprecated__ marker for functions and
+	methods.
+
 2006-12-30	kaffeetisch
 
 	* Glib.xs: Call g_threads_init before g_type_init.  Required (and
